--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -13,8 +13,12 @@ body {
 }
 
 main {
-    margin: 0 auto;
+    margin: 100px auto;
     color: #ffffff;
+}
+
+div.ContentsContainer:last-child {
+    margin-bottom: 0!important;
 }
 
 /*noinspection CssOverwrittenProperties*/
