--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,18 +11,11 @@ import "../assets/base.css"
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>ArmoLab's Onemanager theme</title>
-		<script>
-			addEventListener("DOMContentLoaded", function () {
-				document.body.classList.add("loaded");
-			});
-		</script>
+		<script src="/main.js"></script>
 	</head>
 	<body>
 		<Nav />
 		<main>
-			<!-- <article>
-				<h1>ArmoLab's Onemanager theme</h1>
-			</article> -->
 			<Introduction />
 
 		</main>
