--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -13,8 +13,12 @@ body {
 }
 
 main {
-    margin: 0 auto;
+    margin: 100px auto;
     color: #ffffff;
+}
+
+div.ContentsContainer:last-child {
+    margin-bottom: 0!important;
 }
 
 /*noinspection CssOverwrittenProperties*/
@@ -24,58 +28,16 @@ article {
     margin: 0 auto;
 }
 
-
-button, .as-button {
-    display: inline-block;
-    border-style: solid;
-    border-color: #f8f8ff;
-    border-width: 2px;
-    border-radius: 5px;
-
-    padding: 15px 10px;
-
-    color: #f8f8ff;
-    font-size: medium;
-    font-weight: bold;
-
-    cursor: pointer;
-    overflow: hidden;
-}
-.as-button.bg-transparent, button.bg-transparent {
-    background: none;
-    transition: color ease 0.45s;
-    /* box-shadow: 1px 1px 26px 2px #A8A8A8; */
-    box-shadow: 1px 1px 26px 2px #232323;
-}
-.as-button.bg-transparent span, button.bg-transparent span {
-    position: relative;
-}
-.as-button.bg-transparent::before, button.bg-transparent::before {
-    content: "";
-    transition: width ease 0.45s;
-    background-color: #f8f8ff;
-    height: 55px;
-    width: 0;
-    display: block;
-    position: relative;
-    margin-bottom: -55px;
-    top: -15px;
-    left: -10px;
-}
-.as-button.bg-transparent:hover::before, button.bg-transparent:hover::before {
-    width: 128%;
-}
-.as-button.bg-transparent:hover, button.bg-transparent:hover {
-    color: #1f1f1f;
+button {
+    border: none;
 }
 
-
-a:link:not(.as-button), a:visited:not(.as-button) {
+a:link, a:visited {
     color: #f8f8f8;
     text-decoration: none;
     display: inline-block;
 }
-a:link:not(.as-button)::after, a:visited:not(.as-button)::after {
+a:link::after, a:visited::after {
     content: "";
     width: 0;
     height: 1px;
@@ -86,12 +48,9 @@ a:link:not(.as-button)::after, a:visited:not(.as-button)::after {
     -webkit-transition: width 0.3s ease;
     transition: width 0.3s ease;
 }
-a:link:not(.as-button):hover::after, a:visited:not(.as-button):hover::after {
+a:link:hover::after, a:visited:hover::after {
     width: 100%;
     margin: 0 auto 0 0;
-}
-a.as-button {
-    text-decoration: none;
 }
 
 @keyframes Gradients {
