--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Nav from "../components/NavBar.vue"
+import Nav from "../components/NavBar.astro"
 import Introduction from "../components/Introduction.vue"
 import "../assets/base.css"
 ---
@@ -11,10 +11,9 @@ import "../assets/base.css"
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>ArmoLab's Onemanager theme</title>
-		<script src="/main.js"></script>
 	</head>
 	<body>
-		<Nav />
+		<Nav SiteName="ArmoLab OM"/>
 		<main>
 			<Introduction />
 
