--- a/src/components/ContentContainer.astro
+++ b/src/components/ContentContainer.astro
@@ -1,13 +1,10 @@
-<template>
-	<div class="ContentsContainer">
-		<slot></slot>
-	</div>
-
-</template>
+<div class="ContentContainer">
+	<slot></slot>
+</div>
 
 
-<style scoped>
-	div.ContentsContainer {
+<style>
+	div.ContentContainer {
 		min-height: 50px;
 		width: 85%;
 
