--- a/src/components/PathBar.astro
+++ b/src/components/PathBar.astro
@@ -1,11 +1,11 @@
 ---
 // icons
-import Home from "../components/fa-icons/home.astro"
-import Slash from "../components/fa-icons/chevron-right.astro"
+import Home from "./fa-icons/home.astro"
+import Slash from "./fa-icons/chevron-right.astro"
 
 // container
-import ButtonContainer from "../components/ButtonContainer.astro"
-import IconContainer from "../components/IconContainer.astro"
+import ButtonContainer from "./base/ButtonContainer.astro"
+import IconContainer from "./base/IconContainer.astro"
 ---
 
 <ButtonContainer href="<!--base_path-->">
