--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Nav from "../components/NavBar.astro"
-import Introduction from "../components/Introduction.vue"
+import Introduction from "../components/Introduction.astro"
 import "../assets/base.css"
 ---
 
