--- a/src/components/base/ButtonContainer.astro
+++ b/src/components/base/ButtonContainer.astro
@@ -11,16 +11,17 @@
 	.UglyButton {
 		display: inline-block;
         cursor: pointer;
-		-webkit-transition: -webkit-transform .25s ease-in-out;
-		transition: transform .25s ease;
+		-webkit-transition: all .35s ease-in-out;
+		transition: all .35s ease;
 		background-color: rgba(128, 128, 128, .5);
 		border-radius: 16px;
         padding: 8px 12px;
 		user-select: none;
 	}
 	.UglyButton:hover {
-		-webkit-transform: scale(1.1);
-		transform: scale(1.1);
+		-webkit-transform: scale(1.05);
+		transform: scale(1.05);
+        box-shadow: #6a6a6a 1spx 1px 20px 0px;
 	}
 	.UglyButton::after {
 		content: none !important;
