--- a/src/pages/allinone.astro
+++ b/src/pages/allinone.astro
@@ -6,10 +6,11 @@ import PathBar from "../components/PathBar.astro"
 
 
 // base Components
-import Divider from "../components/Divider.astro"
+import Divider from "../components/base/Divider.astro"
 
 // container
 import ContentContainer from "../components/ContentContainer.astro"
+import LinkContainer from "../components/base/LinkContainer.astro"
 ---
 
 <!--IconValuesStart-->
@@ -46,8 +47,8 @@ import ContentContainer from "../components/ContentContainer.astro"
 
 
         <!--MdRequireStart-->
-            <link rel="stylesheet" href="/depends/marked/github-markdown.css">
-            <script type="text/javascript" src="/depends/marked/marked.js"></script>
+            <link rel="stylesheet" href="/aom-assets/depends/marked/github-markdown.css">
+            <script type="text/javascript" src="/aom-assets/depends/marked/marked.js"></script>
         <!--MdRequireEnd-->
 
         <!--customCss-->
@@ -74,6 +75,7 @@ import ContentContainer from "../components/ContentContainer.astro"
 
 
 		    <ContentContainer>
+            <div>
 
                 <PathBar />
 
@@ -81,79 +83,71 @@ import ContentContainer from "../components/ContentContainer.astro"
                 <h3><!--constStr@File--></h3>
 
                 
-                <div style="display: flex; justify-content: space-between;margin: 0 5%;padding: 0 10px">
-                    <div style="width: 60%;">File<!--constStr@File--></div>
-                    <div style="width: 20%;text-align: right;">EditTime<!--constStr@EditTime--></div>
-                    <div style="width: 20%;text-align: right;">size<!--constStr@Size--></div>
-                </div>
 
                 <!--IsFolderStart-->
 
-                    <ContentContainer>
+                <div style="display: flex; justify-content: space-between;margin: 0 5%;padding: 0 10px" id= "<!--FolderId-->">
+                    <div style="width: 60%;text-overflow: ellipsis;overflow: hidden;white-space: nowrap;"><!--constStr@File--></div>
+                    <div style="width: 20%;text-align: right;"><!--constStr@EditTime--></div>
+                    <div style="width: 20%;text-align: right;"><!--constStr@Size--></div>
+                </div>
+
+
+
+                    <!--FolderListStart-->
+                    <LinkContainer href="<!--FileEncodeReplaceUrl-->/">
                         <div style="display: flex; justify-content: space-between;">
-                            <div style="width: 60%;">file.tar.gz</div>
-                            <div style="width: 20%;text-align: right;">2023/01/01</div>
-                            <div style="width: 20%;text-align: right;">114.5MB</div>
+                            <div
+                                style="width: 50%;text-overflow: ellipsis;overflow: hidden;white-space: nowrap;"
+                                data-FileId="<!--FileId-->"
+                            >
+                                <!--FileEncodeReplaceName-->
+                            </div>
+                            <div style="width: 30%;text-align: right;">
+                                <!--lastModifiedDateTime-->
+                            </div>
+                            <div style="width: 20%;text-align: right;">
+                                <!--size-->
+                            </div>
                         </div>
-                    </ContentContainer>
-                    <ContentContainer>
+                    </LinkContainer>
+                    <!--FolderListEnd-->
+
+
+
+                    <!--FileListStart-->
+                    <LinkContainer href="<!--FileEncodeReplaceUrl-->?preview">
                         <div style="display: flex; justify-content: space-between;">
-                            <div style="width: 60%;">file.tar.gz</div>
-                            <div style="width: 20%;text-align: right;">2023/01/01</div>
-                            <div style="width: 20%;text-align: right;">1919.8MB</div>
+                            <div
+                            style="width: 50%;text-overflow: ellipsis;overflow: hidden;white-space: nowrap;"
+                                data-FileId="<!--FileId-->"
+                            >
+                                <!--FileEncodeReplaceName-->
+                            </div>
+                            <div
+                                style="width: 30%;text-align: right;"
+                            >
+                                <!--lastModifiedDateTime-->
+                            </div>
+                            <div
+                                style="width: 20%;text-align: right;"
+                            >
+                                <!--size-->
+                            </div>
                         </div>
-                    </ContentContainer>
-                    <!--FolderId-->
-                        
-                        
-                        
-                        
+                    </LinkContainer>
+                    <!--FileListEnd-->
+
 
                 <!--IsFolderEnd-->
-                
 
-<!-- SortBy planed -->
+                </div>
 
-<!-- ShowThumbnailsStart-->
-<label><input type="checkbox" id="originalpic"><!--constStr@OriginalPic--></label>
-<button onclick="showthumbnails(this);"><!--constStr@ShowThumbnails--></button>
-<!--ShowThumbnailsEnd -->
 
-<table class="list-table" id="list-table">
-    <tr id="tr0">
-        <th class="file">
-            <a id="file_a0" fileid="<!--FolderId-->" onclick="sortby('a');"><!--constStr@File--></a>
 
-            &nbsp;
-            <button onclick="CopyAllDownloadUrl('.download');"><!--constStr@CopyAllDownloadUrl--></button>
-        </th>
-        <th class="updated_at"><a onclick="sortby('time');"><!--constStr@EditTime--></a></th>
-        <th class="size"><a onclick="sortby('size');"><!--constStr@Size--></a></th>
-    </tr>
-    <!-- Dirs -->
-<!--FolderListStart-->
-    <tr data-to id="tr<!--filenum-->">
-        <td class="file">
-            <ion-icon name="folder"></ion-icon>
-            <a id="file_a<!--filenum-->" name="folderlist" href="<!--FileEncodeReplaceUrl-->/" fileid="<!--FileId-->"><!--FileEncodeReplaceName--></a>
-        </td>
-        <td class="updated_at" id="folder_time<!--filenum-->"><!--lastModifiedDateTime--></td>
-        <td class="size" id="folder_size<!--filenum-->"><!--size--></td>
-    </tr>
-<!--FolderListEnd-->
-<!--FileListStart-->
-    <tr data-to id="tr<!--filenum-->">
-        <td class="file">
 
-            <ion-icon name="<!--IconValue-->"></ion-icon>
-            <a id="file_a<!--filenum-->" name="filelist" href="<!--FileEncodeReplaceUrl-->?preview" fileid="<!--FileId-->" target=_blank><!--FileEncodeReplaceName--></a>
-            <a class="download" href="<!--FileEncodeReplaceUrl-->"><ion-icon name="download"></ion-icon></a>
-        </td>
-        <td class="updated_at" id="file_time<!--filenum-->"><!--lastModifiedDateTime--></td>
-        <td class="size" id="file_size<!--filenum-->"><!--size--></td>
-    </tr>
-<!--FileListEnd-->
-</table>
+
+
 <!--MorePageStart-->
 <form action="" method="POST" id="nextpageform">
     <input type="hidden" id="pagenum" name="pagenum" value="">
