--- a/src/components/Introduction.astro
+++ b/src/components/Introduction.astro
@@ -6,7 +6,7 @@
             <h1>
                 The ArmoLab's Onemanager Theme <br /> ( AOM )
             </h1>
-            <p>A full-rewrited Onemanager Theme with Astro.</p>
+            <p>A Onemanager Theme written in Astro.</p>
         </div>
         <div class="IntroductionItemRight">
             <img src="/aom-assets/images/fufu512.png" alt="" />
